--- a/src/templates_automatically/default/pc/tenant/attach_file_list.html
+++ b/src/templates_automatically/default/pc/tenant/attach_file_list.html
@@ -48,6 +48,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 <link rel="stylesheet" href="/css/base.css?{{version}}" type="text/css" />
 <link rel="stylesheet" href="/css/style.css?{{version}}" type="text/css" />
 <link rel="stylesheet" href="/css/uc-ext-all.css?{{version}}" type="text/css" />
+<link rel="stylesheet" href="/css/template.css?{{version}}" type="text/css" />
 <script type="text/javascript">
 <!--
 //-->
