--- a/src/templates_automatically/default/pc/tenant/template_edit.html
+++ b/src/templates_automatically/default/pc/tenant/template_edit.html
@@ -213,11 +213,11 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 			handler:function(){
 				var dataTable = [];
 				if(fileBlobKey == null){
-					Ext.Msg.alert("Notice", "テンプレートファイルアップロード");
+					Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_FILE_TEMPLATE);
 					return;
 				}
 				if(Ext.ucf.getElementValue('FILED_display_name').trim() == ""){
-					Ext.Msg.alert("Notice", "Display name is required");
+					Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_DISPLAY_NAME);
 					return;
 				}
 				var reduceData = [];
@@ -279,17 +279,17 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 				}).then(res=>{
 					loading.hide();
 					if(res.status){
-						Ext.Msg.alert("Notice", "Sucessfully", function(btn, text){
+						Ext.Msg.alert("Notice", _msg.SUCCESS, function(btn, text){
 							if (btn == 'ok'){
 								window.location.href = '{{vurl|safe}}template'
 							}
 						});
 					}else{
-						Ext.Msg.alert("Notice", "Something went wrong !");
+						Ext.Msg.alert("Notice", _msg.FAILED);
 					}
 				}).catch(function(e){
 					loading.hide();
-					Ext.Msg.alert("Notice", "Something went wrong !");
+					Ext.Msg.alert("Notice", _msg.FAILED);
 				})
 			}
 		});
@@ -301,7 +301,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 				text: 'Add More',
 				handler: function(){
 					if(currentSheet == null){
-						Ext.Msg.alert("Notice", "テンプレートファイルアップロード");
+						Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_FILE_TEMPLATE);
 					}
 					$("#table_question"+currentSheet).append(`<tr class="tcus">
 	<th class="tcus">
@@ -671,7 +671,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 								<td class="layout_td layout_td_all2">
 									<div class="d-flex">
 										<div style="width: 40%;">
-											<p style="text-align: left;"><b>テンプレートファイルアップロード</b></p>
+											<p style="text-align: left;"><b>{{lang.MSG_FILE_TEMPLATE}}</b></p>
 											<div style="text-align: left;">
 												<div style="width: 100px;">
 													<label for="file_template">
@@ -694,7 +694,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 											
 											<!-- <div id="select_sheet"></div> -->
 											<div id="select_sheet" style="margin-left: 8px; margin-bottom: 5px;"></div>
-											<p class="text-left">Display Name:</p>
+											<p class="text-left">{{lang.VMSG_DISPLAY_NAME}}:</p>
 											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
 										</div>
 										<div style="width: 60%;" id="iframe">
