--- a/src/templates_automatically/default/pc/tenant/template_add.html
+++ b/src/templates_automatically/default/pc/tenant/template_add.html
@@ -118,7 +118,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 			Ext.ucf.init();
 
 		var btnReset = new Ext.Button({
-			text:'&nbsp;&nbsp;&nbsp;&nbsp;Submit&nbsp;&nbsp;&nbsp;&nbsp;',
+			text:'&nbsp;&nbsp;&nbsp;&nbsp;{{lang.SUBMIT|safe|escapejs}}&nbsp;&nbsp;&nbsp;&nbsp;',
 			handler:function(){
 				var dataTable = [];
 				var file = document.getElementById('file_template').files[0];
@@ -176,6 +176,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 				frmData.append("filename", filename);
 				frmData.append("sheetName", JSON.stringify(gSheets))
 				frmData.append("display_name", Ext.ucf.getElementValue('FILED_display_name'))
+				frmData.append("download_method", parseInt($("input[type='radio'][name='download_method']:checked").val()));
 				loading.show();
 				fetch('{{vurl|safe}}submit_template', {
 					method: "post",
@@ -206,7 +207,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 
 			createSelectSheetComboBox()
 			new Ext.Button({
-				text: 'Add More',
+				text: _msg.ADD_MORE,
 				handler: function(){
 					if(currentSheet == null){
 						Ext.Msg.alert("Notice", _msg.MSG_REQUIRE_FILE_TEMPLATE);
@@ -225,10 +226,13 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>`);
 				}
@@ -238,7 +242,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 		function errFile(){
 			loading.hide();
 			document.getElementById("file-info").innerText = "";
-			Ext.Msg.alert("Notice", "File error or is not supported. Please choose a valid file and try again !");
+			Ext.Msg.alert("Notice", _msg.FILE_IS_NOT_SUPPORTED);
 			Ext.getCmp('select_sheet1').store.loadData([]);
 			Ext.getCmp('select_sheet1').reset()
 		}
@@ -334,6 +338,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 	<th class="tcus str thcus">必須？</th>
 	<th class="tcus str thcus">選択肢</th>
 	<th class="tcus str thcus">初期値</th>
+	<th class="tcus str thcus" style="width: 110px;">{{lang.ACTIONS|safe|escapejs}}</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
@@ -354,45 +359,8 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
-</tr>
-<tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
-	</th>
-	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
-	</th>
-	<th class="tcus">
-		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
-		</select>
-	</th>
-	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
-	</th>
-	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
-	</th>
-</tr>
-<tr class="tcus">
-	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
-	</th>
-	<th class="tcus">
-		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
-	</th>
-	<th class="tcus">
-		<select class="csselect" name="require[]">
-			<option value="0">No</option>
-			<option value="1">Yes</option>
-		</select>
-	</th>
-	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
-	</th>
-	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 <tr class="tcus">
@@ -414,6 +382,9 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
+	</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
@@ -433,12 +404,69 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
+	</th>
+</tr>
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
+	</th>
+</tr>
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+	<th class="tcus">
+		<a class="btn-del" style="text-align: center; display: block;" href="javascript:void(0)"><input type="button" value="" class="btnTrash"/></a>
 	</th>
 </tr>
 				</table>`);
 			});
 		}
-		
+		$(function(){
+			$("body").on("click", ".btn-del", function(){
+				if($(".btn-del").length == 1){
+					Ext.Msg.alert("Notice", "Table can't empty.");
+					return;
+				}
+				$(this).closest('tr').remove();
+			});
+		});
 	</script>
 	{#
 <script type="text/javascript">
@@ -580,6 +608,8 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 								<td class="layout_td layout_td_all2">
 									<div class="d-flex">
 										<div style="width: 40%;">
+											<p class="text-left">{{lang.VMSG_DISPLAY_NAME}}:</p>
+											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
 											<p style="text-align: left;"><b>{{lang.MSG_FILE_TEMPLATE}}</b></p>
 											<div style="text-align: left;">
 												<div style="width: 100px;">
@@ -590,10 +620,10 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 														align-items: center;
 														justify-content: center;
 														border-radius: 5px;
-														border: 1px solid #bbbbbb;
+														border: 1px solid #1e6f43;
 														cursor: pointer;
 														margin-left: 8px;">
-															<img src="/images/microsoft-excel.png" alt="">
+															<img width="80" src="/images/microsoft-excel.png" alt="">
 														</div>
 													</label>
 												</div>
@@ -603,8 +633,15 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 											
 											<!-- <div id="select_sheet"></div> -->
 											<div id="select_sheet" style="margin-left: 8px; margin-bottom: 5px;"></div>
-											<p class="text-left">{{lang.VMSG_DISPLAY_NAME}}:</p>
-											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
+											<p class="text-left">{{lang.DOWNLOAD_METHOD|safe|escapejs}}:</p>
+											<div style="margin-left: 8px; margin-bottom: 5px;text-align: left;">
+												<input type="radio" id="pdf" name="download_method" value="1">
+												<label for="pdf" style="font-size: 80%;">PDF</label><br>
+												<input type="radio" id="excel" name="download_method" value="2">
+												<label for="excel" style="font-size: 80%;">Excel</label><br>
+												<input type="radio" id="other" name="download_method" checked value="0">
+												<label for="other" style="font-size: 80%;">ユーザーに選択</label>
+											</div>
 										</div>
 										<div style="width: 60%;" id="iframe">
 											
