--- a/src/templates_automatically/default/pc/tenant/template_add.html
+++ b/src/templates_automatically/default/pc/tenant/template_add.html
@@ -301,7 +301,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 
 			var file = document.getElementById('file_template').files[0];
 			if(typeof file == 'undefined') {
-				fileBlobKey = null;
+				loading.hide();
 				return;
 			}
 			const fileInfo = file.name + " - " + file.size/1000 + "kB";
@@ -460,7 +460,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 		}
 		$(function(){
 			$("body").on("click", ".btn-del", function(){
-				if($(".btn-del").length == 1){
+				if($(`#table_question${currentSheet} .btn-del`).length == 1){
 					Ext.Msg.alert("Notice", _msg.TABLE_CAN_NOT_EMPTY);
 					return;
 				}
