--- a/src/templates_automatically/default/pc/tenant/template_edit.html
+++ b/src/templates_automatically/default/pc/tenant/template_edit.html
@@ -398,7 +398,7 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 
 			var file = document.getElementById('file_template').files[0];
 			if(typeof file == 'undefined') {
-				fileBlobKey = null;
+				loading.hide();
 				return;
 			}
 			const fileInfo = file.name + " - " + file.size/1000 + "kB";
